--- a/style.css
+++ b/style.css
@@ -21,8 +21,8 @@ body{
     max-width: 1200px;
     margin:0rem 10rem;
     margin-top: 5rem;
-    padding: 0 7rem;
-    width: 100vw;
+/*     padding: 0 7rem; */
+/*     width: 100vw; */
     max-height: 100vh;
     text-align: center;
 }
